[metadata]
name = house-price-prediction-satish
version = v1
author = tigersatish
author_email = satish.ragunatha@tigeranalytics.com
description = Package for house price prediction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tigersatish/mle-training
project_urls =
    Bug Tracker = https://github.com/tigersatish/mle-training/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
